--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "018c190b",
    "metadata": {},
    "outputs": [],
@@ -29,19 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "100e5571",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'zoo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mzoo\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmenagerie\u001b[39;00m\n\u001b[32m      2\u001b[39m menagerie.hours()\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'zoo'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Open9-5 daily\n"
      ]
     }
    ],
@@ -60,11 +56,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "092ca35b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perdido Street Station\n",
+      "Small Gods\n",
+      "The Spellman Files\n",
+      "The Weirdstone of Brisingamen\n",
+      "Thud!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine, text\n",
+    "\n",
+    "engine = create_engine('sqlite:///books.db')\n",
+    "conn = engine.connect()\n",
+    "\n",
+    "sql = text(\"SELECT title FROM book ORDER BY title\")\n",
+    "result = conn.execute(sql)\n",
+    "\n",
+    "for row in result:\n",
+    "    print(row[0])\n",
+    "\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
